# sunraster

./: .codecov.yaml  .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yaml  .rtd-environment.yml  .ruff.toml  .sunpy-template.yml  .travis.yml  CHANGELOG.rst  IRIS RasterCube.ipynb  IRIS Spectrograph.ipynb  IRISpy SJICube.ipynb  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  contributing.md  irispy_requirements.md  pyproject.toml  pytest.ini  python club - irispy intro.key  readthedocs.yml  setup.cfg  setup.py  sg_animator  ski_animatorCOPY.py.ipynb  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
Notebooks/: IRISpy SJICube.ipynb
changelog/: 139.breaking.rst  162.bugfix.rst  168.feature.rst  169.feature.rst  171.feature.rst  173.feature.2.rst  173.feature.rst  178.bugfix.1.rst  178.bugfix.2.rst  178.feature.rst  178.trivial.rst  179.bugfix.rst  182.breaking.3.rst  182.breaking.rst  182.feature.3.rst  184.breaking.rst  184.feature.rst  198.breaking.rst  204.bugfix.rst  205.bugfix.rst  215.bugfix.rst  257.breaking.rst  273.breaking.rst  293.breaking.rst  README.rst  ndc2.1.breaking.rst  ndc2.1.feature.rst  ndc2.2.feature.rst
docs/: IRISMapCube.rst  IRISMapCubeSequence.rst  api.rst  changelog.rst  conf.py  contributing.rst  data_classes.rst  getting_help.rst  index.rst  installation.rst  introduction.rst  irispy.rst  mapcubed.rst  nitpick-exceptions  raster.rst  rasterpy.rst  sji.rst  slitspectrographpy.rst  spectrograph.rst  sunraster.rst
docs/data_types/: index.rst  raster.rst  spectrogram.rst
docs/irispy/: api.rst  contributing.rst  getting_help.rst
docs/whatsnew/: index.rst
irispy/: __init__.py  _sunpy_init.py  conftest.py  helpers.py  iris_tools.py  mapcubed.py  mg_raster.py  mi_iris_tools.py  new_sji.py  obsid.py  reproject_raster.py  sji.py  sji_animator.py  sji_test.py  sjindcube.py  spectrogram.py  spectrograph.py  version.py
irispy/data/: __init__.py  _sample.py  idl_iris_get_response_20130903_new_version001.sav  idl_iris_get_response_20130903_new_version002.sav  idl_iris_get_response_20130903_new_version003.sav  idl_iris_get_response_20130903_new_version004.sav  idl_iris_get_response_20150515.sav  idl_iris_get_response_20150515_new.sav  iris_data.py  iris_sg_psfs.geny  iris_sra_20130211.geny  iris_sra_c_20150331.geny  mg_raster.py  sample.py  setup_package.py  v36-table10.csv  v38-table10.csv
irispy/data/test/: __init__.py
irispy/tests/: test_SpectrogramSequence.py  test_iris_tools.py  test_new_sji.py  test_obsid.py  test_sji.py  test_spectrogram.py  test_spectrograph.py
joss_paper/: paper.bib  paper.md
rasterpy/: instr_readers.py  raster.py
rasterpy/instr/iris/: iris_tools.py  sji.py  spectrograph.py
rasterpy/instr/iris/data/: setup_package.py  v40-table10.csv
rasterpy/tests/: test_spectrograph.py
rasterpy/utils/: sequence.py
slitspectrographpy/: spectrograph.py
slitspectrographpy/data/: iris_sra_20130715.geny  iris_sra_c_20161022.geny  setup_package.py  v36-table2000.csv  v38-table2000.csv  v40-table2000.csv
slitspectrographpy/data/test/: __init__.py
slitspectrographpy/tests/: test_spectrograph.py
slitspectrographpy/utils/: sequence.py
sunraster/: __init__.py  meta.py  raster.py  raster_sequence.py  spectrogram.py  spectrogram_sequence.py  version.py
sunraster/_dev/: scm_version.py
sunraster/data/: setup_package.py
sunraster/instr/: iris.py  spice.py
sunraster/instr/iris/: iris_tools.py  obsid.py  sji.py  spectrograph.py
sunraster/instr/iris/data/: idl_iris_get_response_20130903_new_version001.sav  sample.py  v36-table2000.csv  v38-table2000.csv  v40-table10.csv  v40-table2000.csv
sunraster/instr/iris/data/test/: __init__.py
sunraster/instr/iris/tests/: test_iris_tools.py  test_obsid.py  test_sji.py  test_spectrograph.py
sunraster/instr/tests/: test_spice.py
sunraster/io/: iris.py
sunraster/meta/: meta.py  spice.py
sunraster/tests/: __init__.py  test_meta.py  test_raster.py  test_rastersequence.py  test_spectrogram.py  test_spectrogramsequence.py  test_spice.py
sunraster/tests/data/: solo_L2_spice-n-ras-db_20200602T081733_V01_12583760-000.fits  solo_L2_spice-n-sit_20200620T235901_V01_16777431-000.fits
sunraster/utils/: sequence.py
