[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sunraster"
description = "sunraster is an open-source Python library that provides the tools to read in and analyze spectrogram data."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "numpy>=1.24",
  "astropy>=5.2",
  "ndcube[plotting]>=2.1.2"
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["sunraster[instr]"]
instr = [
    "sunpy>=6.0",
]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-astropy",
  "pytest-xdist",
]
docs = [
  "sphinx",
<<<<<<<
=======
  "sphinx-automodapi",
  "sunpy-sphinx-theme",
  "packaging",
]
[project.urls]
>>>>>>>
  "sphinx_automodapi",
  "sphinx-changelog",
  "sphinx-gallery",
  "sunpy-sphinx-theme"
]
[project.urls]
repository = "https://sunpy.org"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["sunraster*"]
exclude = ["sunraster._dev*"]

[tool.setuptools_scm]
write_to = "sunraster/_version.py"

[ tool.gilesbot ]
  [ tool.gilesbot.pull_requests ]
    enabled = true

  [ tool.gilesbot.towncrier_changelog ]
    enabled = true
    verify_pr_number = true
    changelog_skip_label = "No Changelog Entry Needed"
    help_url = "https://github.com/sunpy/sunraster/blob/main/changelog/README.rst"
    changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/sunraster/blob/main/changelog/README.rst)."
    type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/sunraster/blob/main/changelog/README.rst)"
    number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

[tool.towncrier]
    package = "sunraster"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/sunraster/pull/{issue}>`__"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Breaking Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "deprecation"
      name = "Deprecations"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "New Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Internal Changes"
      showcontent = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .history
  )/
)
'''
