[metadata]
name = irispy
author = The SunPy Community
author_email = sunpy@googlegroups.com
description = A SunPy-affiliated package which provides tools to analyze data from IRIS.
long_description = file: README.rst
license = BSD 3-Clause
url = http://docs.sunpy.org/projects/irispy/
edit_on_github = True
github_project = sunpy/irispy
python_requires = ">=3.6"

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = ndcube
zip_safe = False
use_2to3 = False

[options.extras_require]
tests =
  pytest-astropy
  pytest-cov
  tox
docs =
  sphinx
  sphinx-astropy
  sunpy-sphinx-theme
  towncrier

[options.package_data]
* = *.c
irispy = data/*
irispy.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
testpaths = "irispy" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = -p no:warnings
markers =
    online: marks this test function as needing online connectivity.
    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
# Disable internet access for tests not marked remote_data
remote_data_strict = True

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
max-line-length = 100

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
max_line_length = 100

[isort]
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = irispy
known_astropy = astropy, asdf, sunpy
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = False
length_sort = False
length_sort_stdlib = True

[coverage:run]
omit =
  irispy/conftest.py
  irispy/cython_version*
  irispy/*setup*
  irispy/extern/*
  irispy/*/tests/*
  irispy/version*
  irispy/__init__*
  irispy/_sunpy_init*
  */irispy/conftest.py
  */irispy/cython_version*
  */irispy/*setup*
  */irispy/extern/*
  */irispy/*/tests/*
  */irispy/version*
  */irispy/__init__*
  */irispy/_sunpy_init*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
