[metadata]
name = sunraster
provides = sunraster
description = sunraster
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_file = LICENSE.rst
url = https://sunpy.org
edit_on_github = True
github_project = sunpy/sunraster
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  numpy
  astropy>=3.1
  ndcube>=1.3.2

[options.extras_require]
tests =
  pytest < 5.4
  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
  tox
docs =
  sphinx>=2
  sphinx_automodapi
  sphinx-gallery
  sunpy-sphinx-theme
  towncrier

[tool:pytest]
minversion = 5.0
testpaths = "sunraster" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
text_file_format = rst
addopts = -p no:warnings --doctest-rst
markers =
    online: marks this test function as needing online connectivity.
remote_data_strict = True

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
rst-directives =
    plot

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_sunpy = sunpy
known_first_party = sunraster
length_sort = False
length_sort_stdlib = True
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, SUNPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  sunraster/conftest.py
  sunraster/cython_version*
  sunraster/*setup*
  sunraster/extern/*
  sunraster/*/tests/*
  sunraster/version*
  sunraster/__init__*
  */sunraster/conftest.py
  */sunraster/cython_version*
  */sunraster/*setup*
  */sunraster/extern/*
  */sunraster/*/tests/*
  */sunraster/version*
  */sunraster/__init__*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
